--- a/bankist.html
+++ b/bankist.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="src/styles/bankist.css" />
+    <link rel="stylesheet" href="bankist.css" />
     <title>Bankist</title>
   </head>
   <body>
@@ -350,6 +350,6 @@
     </div>
     <div class="overlay hidden"></div>
 
-    <script src="src/scripts/bankist.js"></script>
+    <script src="bankist.js"></script>
   </body>
 </html>
